--- a/src/patternfly/components/Form/form.scss
+++ b/src/patternfly/components/Form/form.scss
@@ -87,6 +87,7 @@ $pf-v6-c-form--m-horizontal--breakpoint-map: build-breakpoint-map("sm", "md", "l
   // Form group label info
   --#{$form}__group-label-info--MarginInlineStart: var(--pf-t--global--spacer--sm);
   --#{$form}__group-label-info--FontSize: var(--pf-t--global--font--size--body--sm);
+  --#{$form}--m-horizontal__group-label--m-info--Gap: var(--pf-t--global--spacer--sm);
 
   // Group control
   --#{$form}__group-control--m-inline--child--MarginInlineEnd: var(--pf-t--global--spacer--lg);
@@ -232,11 +233,23 @@ $pf-v6-c-form--m-horizontal--breakpoint-map: build-breakpoint-map("sm", "md", "l
   &.pf-m-info {
     display: flex;
     align-items: flex-end;
+
+    .#{$form}.pf-m-horizontal & {
+      --#{$form}__group-label-info--MarginInlineStart: 0;
+
+      flex-direction: column;
+      gap: var(--#{$form}--m-horizontal__group-label--m-info--Gap);
+      align-items: flex-start;
+    }
   }
 }
 
 .#{$form}__group-label-main {
   flex-grow: 1;
+
+  .#{$form}.pf-m-horizontal & {
+    flex-grow: 0;
+  }
 }
 
 .#{$form}__group-label-info {
