--- a/src/patternfly/base/patternfly-fonts.scss
+++ b/src/patternfly/base/patternfly-fonts.scss
@@ -1,7 +1,7 @@
 @use '../sass-utilities' as *;
 
 @font-face {
-  font-family: RedHatTextVF;
+  font-family: "Red Hat Text";
   font-style: normal;
   font-weight: 400 500;
   src: url("#{$pf-v6-global--font-path}/RedHatText/RedHatTextVF.woff2") format("woff2-variations");
@@ -9,7 +9,7 @@
 }
 
 @font-face {
-  font-family: RedHatTextVF;
+  font-family: "Red Hat Text";
   font-style: italic;
   font-weight: 400 500;
   src: url("#{$pf-v6-global--font-path}/RedHatText/RedHatTextVF-Italic.woff2") format("woff2-variations");
@@ -17,7 +17,7 @@
 }
 
 @font-face {
-  font-family: RedHatDisplayVF;
+  font-family: "Red Hat Display";
   font-style: normal;
   font-weight: 400 700;
   src: url("#{$pf-v6-global--font-path}/RedHatDisplay/RedHatDisplayVF.woff2") format("woff2-variations");
@@ -25,7 +25,7 @@
 }
 
 @font-face {
-  font-family: RedHatDisplayVF;
+  font-family: "Red Hat Display";
   font-style: italic;
   font-weight: 400 700;
   src: url("#{$pf-v6-global--font-path}/RedHatDisplay/RedHatDisplayVF-Italic.woff2") format("woff2-variations");
@@ -33,7 +33,7 @@
 }
 
 @font-face {
-  font-family: RedHatMonoVF;
+  font-family: "Red Hat Mono";
   font-style: normal;
   font-weight: 400;
   src: url("#{$pf-v6-global--font-path}/RedHatMono/RedHatMonoVF.woff2") format("woff2-variations");
@@ -41,7 +41,7 @@
 }
 
 @font-face {
-  font-family: RedHatMonoVF;
+  font-family: "Red Hat Mono";
   font-style: italic;
   font-weight: 400;
   src: url("#{$pf-v6-global--font-path}/RedHatMono/RedHatMonoVF-Italic.woff2") format("woff2-variations");
