--- a/src/patternfly/base/tokens/tokens-local.scss
+++ b/src/patternfly/base/tokens/tokens-local.scss
@@ -1,29 +1,14 @@
-// FONT TOKENS
-// Manually added from hackathon values
-// Currently not being exported from Figma because they are styles rather than variables
-// The ability to make font variables is reportedly coming by the end of the year
+// LOCAL TOKENS
 
 @mixin pf-v6-tokens {
-  // Base tokens for fonts
-  --pf-t--global--font--family--100: redhattextvf, redhattext, helvetica, arial, sans-serif;
-  --pf-t--global--font--family--200: redhatdisplayvf, redhatdisplay, helvetica, arial, sans-serif;
-  --pf-t--global--font--family--300: redhatmonovf, redhatmono, liberationmono, consolas, sfmono-regular, menlo, monaco, courier new, monospace;
-  --pf-t--global--font--line-height--100: 1.3;
-  --pf-t--global--font--line-height--200: 1.5;
-  --pf-t--global--font--weight--body--100: 400;
+  // Missing base font tokens
+  --pf-t--global--font--weight--body--100: 400; // not currently used
   --pf-t--global--font--weight--body--200: 500;
-  --pf-t--global--font--weight--heading--100: 700;
+  --pf-t--global--font--weight--heading--100: 700; // not currently used
   --pf-t--global--font--weight--heading--200: 700;
 
-  // Semantic tokens for fonts
-  --pf-t--global--font--family--body: var(--pf-t--global--font--family--100);
-  --pf-t--global--font--family--heading: var(--pf-t--global--font--family--200);
-  --pf-t--global--font--family--mono: var(--pf-t--global--font--family--300);
-  --pf-t--global--font--line-height--body: var(--pf-t--global--font--line-height--200);
-  --pf-t--global--font--line-height--heading: var(--pf-t--global--font--line-height--100);
-  --pf-t--global--font--weight--body: var(--pf-t--global--font--weight--body--100);
+  // Missing semantic font tokens
   --pf-t--global--font--weight--body--bold: var(--pf-t--global--font--weight--body--200);
-  --pf-t--global--font--weight--heading: var(--pf-t--global--font--weight--heading--100);
   --pf-t--global--font--weight--heading--bold: var(--pf-t--global--font--weight--heading--200);
 
   // TODO Maintaining these in addition to the h1-h6 sizes
