fix(tree-table): fixed cell border mobile positioning

--- a/src/patternfly/components/Table/table-grid.scss
+++ b/src/patternfly/components/Table/table-grid.scss
@@ -269,6 +269,7 @@
     }
 
     &::before {
+      position: revert;
       font-weight: bold;
       text-align: start;
       content: attr(data-label);
