--- a/src/patternfly/components/TextInputGroup/text-input-group.scss
+++ b/src/patternfly/components/TextInputGroup/text-input-group.scss
@@ -3,24 +3,24 @@
 :where(:root, .#{$text-input-group}) {
   --#{$text-input-group}--BackgroundColor: var(--pf-t--global--background--color--control--default);
   --#{$text-input-group}--BorderColor: var(--pf-t--global--border--color--default);
-  --#{$text-input-group}__main--m-success--BorderColor: var(--pf-t--global--border--color--status--success--default);
-  --#{$text-input-group}__main--m-warning--BorderColor: var(--pf-t--global--border--color--status--warning--default);
-  --#{$text-input-group}__main--m-error--BorderColor: var(--pf-t--global--border--color--status--danger--default);
+  --#{$text-input-group}--m-success--BorderColor: var(--pf-t--global--border--color--status--success--default);
+  --#{$text-input-group}--m-warning--BorderColor: var(--pf-t--global--border--color--status--warning--default);
+  --#{$text-input-group}--m-error--BorderColor: var(--pf-t--global--border--color--status--danger--default);
   --#{$text-input-group}--BorderWidth: var(--pf-t--global--border--width--control--default);
   --#{$text-input-group}__LineHeight: var(--pf-t--global--font--line-height--body);
   --#{$text-input-group}__FontSize: var(--pf-t--global--font--size--body--default);
 
   // Border hover
   --#{$text-input-group}--m-hover--BorderColor: var(--pf-t--global--border--color--hover);
-  --#{$text-input-group}--m-hover__main--m-success--BorderColor: var(--pf-t--global--border--color--status--success--hover);
-  --#{$text-input-group}--m-hover__main--m-warning--BorderColor: var(--pf-t--global--border--color--status--warning--hover);
-  --#{$text-input-group}--m-hover__main--m-error--BorderColor: var(--pf-t--global--border--color--status--danger--hover);
+  --#{$text-input-group}--m-hover--m-success--BorderColor: var(--pf-t--global--border--color--status--success--hover);
+  --#{$text-input-group}--m-hover--m-warning--BorderColor: var(--pf-t--global--border--color--status--warning--hover);
+  --#{$text-input-group}--m-hover--m-error--BorderColor: var(--pf-t--global--border--color--status--danger--hover);
   
 
   // Main
   --#{$text-input-group}__main--first-child--not--text-input--MarginInlineStart: var(--pf-t--global--spacer--xs);
   --#{$text-input-group}__main--m-icon__text-input--PaddingInlineStart: var(--pf-t--global--spacer--xl);
-  --#{$text-input-group}__main--m-status__text-input--PaddingInlineEnd: var(--pf-t--global--spacer--xl);
+  --#{$text-input-group}--status__text-input--PaddingInlineEnd: var(--pf-t--global--spacer--xl);
   --#{$text-input-group}__main--RowGap: var(--pf-t--global--spacer--xs);
   --#{$text-input-group}__main--ColumnGap: var(--pf-t--global--spacer--xs);
 
@@ -30,7 +30,6 @@
   --#{$text-input-group}__text--BorderStartEndRadius: var(--#{$text-input-group}__text--BorderRadius--base);
   --#{$text-input-group}__text--BorderEndEndRadius: var(--#{$text-input-group}__text--BorderRadius--base);
   --#{$text-input-group}__text--BorderEndStartRadius: var(--#{$text-input-group}__text--BorderRadius--base);
-  --#{$text-input-group}__text--Position: revert;
 
   // Label group
   --#{$text-input-group}--c-label-group__main--PaddingBlockStart: var(--pf-t--global--spacer--xs);
@@ -50,7 +49,7 @@
 
   // Icon
   --#{$text-input-group}__icon--InsetInlineStart: var(--pf-t--global--spacer--sm);
-  --#{$text-input-group}__icon--InsetInlineEnd: var(--pf-t--global--spacer--sm);
+  --#{$text-input-group}__icon--m-status--InsetInlineEnd: var(--pf-t--global--spacer--sm);
   --#{$text-input-group}__icon--Color: var(--pf-t--global--icon--color--regular);
   --#{$text-input-group}--m-disabled__icon--Color: var(--pf-t--global--icon--color--disabled);
   --#{$text-input-group}__icon--m-status--Color: var(--pf-t--global--icon--color--regular);
@@ -117,25 +116,25 @@
   }
 
   &.pf-m-success {
-    --#{$text-input-group}--BorderColor: var(--#{$text-input-group}__main--m-success--BorderColor);
-    --#{$text-input-group}--m-hover--BorderColor: var(--#{$text-input-group}--m-hover__main--m-success--BorderColor);
+    --#{$text-input-group}--BorderColor: var(--#{$text-input-group}--m-success--BorderColor);
+    --#{$text-input-group}--m-hover--BorderColor: var(--#{$text-input-group}--m-hover--m-success--BorderColor);
     --#{$text-input-group}__icon--m-status--Color: var(--#{$text-input-group}__main--m-success__icon--m-status--Color);  
   }
 
   &.pf-m-warning {
-    --#{$text-input-group}--BorderColor: var(--#{$text-input-group}__main--m-warning--BorderColor);
-    --#{$text-input-group}--m-hover--BorderColor: var(--#{$text-input-group}--m-hover__main--m-warning--BorderColor);
+    --#{$text-input-group}--BorderColor: var(--#{$text-input-group}--m-warning--BorderColor);
+    --#{$text-input-group}--m-hover--BorderColor: var(--#{$text-input-group}--m-hover--m-warning--BorderColor);
     --#{$text-input-group}__icon--m-status--Color: var(--#{$text-input-group}__main--m-warning__icon--m-status--Color);  
   }
 
   &.pf-m-error {
-    --#{$text-input-group}--BorderColor: var(--#{$text-input-group}__main--m-error--BorderColor);
-    --#{$text-input-group}--m-hover--BorderColor: var(--#{$text-input-group}--m-hover__main--m-error--BorderColor);
+    --#{$text-input-group}--BorderColor: var(--#{$text-input-group}--m-error--BorderColor);
+    --#{$text-input-group}--m-hover--BorderColor: var(--#{$text-input-group}--m-hover--m-error--BorderColor);
     --#{$text-input-group}__icon--m-status--Color: var(--#{$text-input-group}__main--m-error__icon--m-status--Color);  
   }
   
   &:where(.pf-m-success, .pf-m-warning, .pf-m-error) {
-    --#{$text-input-group}__text-input--PaddingInlineEnd: var(--#{$text-input-group}__main--m-status__text-input--PaddingInlineEnd);
+    --#{$text-input-group}__text-input--PaddingInlineEnd: var(--#{$text-input-group}--status__text-input--PaddingInlineEnd);
   }
 }
 
@@ -170,7 +169,7 @@
 }
 
 .#{$text-input-group}__text {
-  position: var(--#{$text-input-group}__text--Position);
+  position: var(--#{$text-input-group}__text--Position, revert);
   display: inline-grid;
   flex: 1;
   grid-template-areas: "text-input";
@@ -180,15 +179,13 @@
 .#{$text-input-group}__icon {
   position: absolute;
   inset-block-start: 50%;
+  inset-inline-start: var(--#{$text-input-group}__icon--InsetInlineStart);
+  color: var(--#{$text-input-group}__icon--Color);
   transform: translateY(var(--#{$text-input-group}__icon--TranslateY));
-  
-  &:not(.pf-m-status) {
-    inset-inline-start: var(--#{$text-input-group}__icon--InsetInlineStart);
-    color: var(--#{$text-input-group}__icon--Color);
-  }
-    
+
   &.pf-m-status {
-    inset-inline-end: var(--#{$text-input-group}__icon--InsetInlineEnd);
+    inset-inline-start: auto;
+    inset-inline-end: var(--#{$text-input-group}__icon--m-status--InsetInlineEnd);
     color: var(--#{$text-input-group}__icon--m-status--Color);
   }
 }
