--- a/src/patternfly/base/tokens/tokens-local.scss
+++ b/src/patternfly/base/tokens/tokens-local.scss
@@ -1,30 +1,9 @@
-// FONT TOKENS
-// Manually added from hackathon values
-// Currently not being exported from Figma because they are styles rather than variables
-// The ability to make font variables is reportedly coming by the end of the year
+// LOCAL TOKENS
 
 @mixin pf-v6-tokens {
-  // Base tokens for fonts
-  --pf-t--global--font--family--100: redhattextvf, redhattext, helvetica, arial, sans-serif;
-  --pf-t--global--font--family--200: redhatdisplayvf, redhatdisplay, helvetica, arial, sans-serif;
-  --pf-t--global--font--family--300: redhatmonovf, redhatmono, liberationmono, consolas, sfmono-regular, menlo, monaco, courier new, monospace;
-  --pf-t--global--font--line-height--100: 1.3;
-  --pf-t--global--font--line-height--200: 1.5;
-  --pf-t--global--font--weight--body--100: 400;
-  --pf-t--global--font--weight--body--200: 500;
-  --pf-t--global--font--weight--heading--100: 700;
-  --pf-t--global--font--weight--heading--200: 700;
-
-  // Semantic tokens for fonts
-  --pf-t--global--font--family--body: var(--pf-t--global--font--family--100);
-  --pf-t--global--font--family--heading: var(--pf-t--global--font--family--200);
-  --pf-t--global--font--family--mono: var(--pf-t--global--font--family--300);
-  --pf-t--global--font--line-height--body: var(--pf-t--global--font--line-height--200);
-  --pf-t--global--font--line-height--heading: var(--pf-t--global--font--line-height--100);
-  --pf-t--global--font--weight--body: var(--pf-t--global--font--weight--body--100);
-  --pf-t--global--font--weight--body--bold: var(--pf-t--global--font--weight--body--200);
-  --pf-t--global--font--weight--heading: var(--pf-t--global--font--weight--heading--100);
-  --pf-t--global--font--weight--heading--bold: var(--pf-t--global--font--weight--heading--200);
+  // TODO Missing semantic font tokens not getting exported from Figma properly
+  --pf-t--global--font--weight--body--bold: var(--pf-t--global--font--weight--200);
+  --pf-t--global--font--weight--heading--bold: var(--pf-t--global--font--weight--400);
 
   // TODO Maintaining these in addition to the h1-h6 sizes
   --pf-t--global--font--size--heading--xs: var(--pf-t--global--font--size--md);
