--- a/src/patternfly/components/Page/page.scss
+++ b/src/patternfly/components/Page/page.scss
@@ -7,8 +7,8 @@ $pf-page-v6--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
 
 :where(:root, .#{$page}) {
   --#{$page}--BackgroundColor: var(--pf-t--global--background--color--secondary--default);
-  --#{$page}--inset: var(--pf-t--global--spacer--md);
-  --#{$page}--xl--inset: var(--pf-t--global--spacer--xl);
+  --#{$page}--inset: var(--pf-t--global--spacer--inset--page-chrome); //  var(--pf-t--global--spacer--md);
+  --#{$page}--xl--inset: var(--pf-t--global--spacer--xl); // TODO do we need this? If so, sidebar body needs to adjust also
 
   // Header
   --#{$page}--c-masthead--ZIndex: var(--pf-t--global--z-index--md);
@@ -44,8 +44,8 @@ $pf-page-v6--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
   --#{$page}__sidebar-title--FontWeight: var(--pf-t--global--font--weight--heading--default);
 
   // Sidebar body
-  --#{$page}__sidebar-body--PaddingInlineEnd: 0;
-  --#{$page}__sidebar-body--PaddingInlineStart: 0;
+  --#{$page}__sidebar-body--PaddingInlineEnd: var(--pf-t--global--spacer--gutter--default);
+  --#{$page}__sidebar-body--PaddingInlineStart: var(--pf-t--global--spacer--inset--page-chrome);
   --#{$page}__sidebar-body--m-page-insets--PaddingInlineEnd: var(--#{$page}--inset);
   --#{$page}__sidebar-body--m-page-insets--PaddingInlineStart: var(--#{$page}--inset);
   --#{$page}__sidebar-body--m-context-selector--PaddingInlineEnd: var(--pf-t--global--spacer--md);
@@ -59,8 +59,8 @@ $pf-page-v6--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
   --#{$page}__main-container--ZIndex: var(--pf-t--global--z-index--xs);
   --#{$page}__main-container--MaxHeight: calc(100% - var(--pf-t--global--spacer--lg));
   --#{$page}__main-container--BackgroundColor: var(--pf-t--global--background--color--primary--default);
-  --#{$page}__main-container--MarginInlineStart: var(--pf-t--global--spacer--lg);
-  --#{$page}__main-container--MarginInlineEnd: var(--pf-t--global--spacer--lg);
+  --#{$page}__main-container--MarginInlineStart: var(--#{$page}--inset); // var(--pf-t--global--spacer--lg); // TODO should this be var(--#{$page}--inset);
+  --#{$page}__main-container--MarginInlineEnd: var(--#{$page}--inset);  // var(--pf-t--global--spacer--lg);
   --#{$page}__main-container--BorderRadius: var(--pf-t--global--border--radius--large);
   --#{$page}__main-container--BorderWidth: var(--pf-t--global--spacer--sm); // TODO Change to be a page outline token
   --#{$page}__main-container--BorderColor: var(--#{$page}__main-container--BackgroundColor); // TODO Border should match the background to blend in - change to be a page outline token
@@ -131,13 +131,21 @@ $pf-page-v6--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
   max-height: 100%;
   background-color: var(--#{$page}--BackgroundColor);
 
+  @media (min-width: $pf-v6-global--breakpoint--md) {
+    grid-template-areas:
+      "header header header"
+      "main main main";
+    grid-template-columns: min-content max-content 1fr; // TODO this still has the problem of too much space for the toggle
+    column-gap: var(--pf-t--global--spacer--gutter--default); // TODO good use of gutter or no?
+    }
+
   @media (min-width: $pf-v6-global--breakpoint--xl) {
     grid-template-areas:
-      "header header"
-      "sidebar main";
-    grid-template-columns: max-content 1fr;
+      "header header header"
+      "sidebar sidebar main";
+    grid-template-columns: min-content max-content 1fr;
     }
-}
+  }
 
 // Header
 .#{$page} > .#{$masthead} {
@@ -317,6 +325,10 @@ $pf-page-v6--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
   background: var(--#{$page}__main-container--BackgroundColor);
   border: var(--#{$page}__main-container--BorderWidth) solid var(--#{$page}__main-container--BorderColor);
   border-radius: var(--#{$page}__main-container--BorderRadius);
+
+  @media screen and (min-width: $pf-v6-global--breakpoint--xl) {
+    --#{$page}__main-container--MarginInlineStart: 0;
+  }
 
   &.pf-m-fill,
   &:has(.#{$page}__main-wizard) {
