--- a/src/patternfly/components/Divider/divider.hbs
+++ b/src/patternfly/components/Divider/divider.hbs
@@ -1,6 +1,7 @@
-<{{#if divider--type}}{{divider--type}}{{else}}hr{{/if}} class="{{pfv}}divider{{#if divider--modifier}} {{divider--modifier}}{{/if}}
+<{{#if divider--type}}{{divider--type}}{{else}}hr{{/if}} class="{{pfv}}divider
   {{setModifiers
     divider--IsVertical='pf-m-vertical'
+    divider--modifier=divider--modifier
   }}"
 {{#if divider--attribute}}
   {{divider--attribute}}
