--- a/src/patternfly/components/Form/form.scss
+++ b/src/patternfly/components/Form/form.scss
@@ -96,8 +96,9 @@ $pf-v5-c-form--m-horizontal--breakpoint-map: build-breakpoint-map("sm", "md", "l
   --#{$form}__group-label-help--focus--Color: var(--#{$pf-global}--Color--100);
 
   // Form group label info
-  --#{$form}__group-label-info--MarginLeft: var(--#{$pf-global}--spacer--sm);
+  --#{$form}__group-label--m-info--Gap: var(--#{$pf-global}--spacer--sm);
   --#{$form}__group-label-info--FontSize: var(--#{$pf-global}--FontSize--sm);
+  --#{$form}--m-horizontal__group-label--m-info--Gap: var(--#{$pf-global}--spacer--sm);
 
   // Group control
   --#{$form}__group-control--m-inline--child--MarginRight: var(--#{$pf-global}--spacer--lg);
@@ -201,12 +202,23 @@ $pf-v5-c-form--m-horizontal--breakpoint-map: build-breakpoint-map("sm", "md", "l
       .#{$form}__group-label {
         padding-block-start: var(--#{$form}--m-horizontal__group-label--md--PaddingTop);
 
-        // stylelint-disable-next-line
+        // stylelint-disable max-nesting-depth
         &.pf-m-no-padding-top {
           --#{$form}--m-horizontal__group-label--md--PaddingTop: var(--#{$form}--m-horizontal__group-label--m-no-padding--md--PaddingTop);
 
           transform: translateY(var(--#{$form}--m-horizontal__group-label--m-no-padding--md--TranslateY));
         }
+
+        &.pf-m-info {
+          flex-direction: column;
+          gap: var(--#{$form}--m-horizontal__group-label--m-info--Gap);
+          align-items: flex-start;
+        }
+        // stylelint-enable
+      }
+
+      .#{$form}__group-label-main {
+        flex-grow: 0;
       }
 
       .#{$form}__group-control {
@@ -252,6 +264,7 @@ $pf-v5-c-form--m-horizontal--breakpoint-map: build-breakpoint-map("sm", "md", "l
 
   &.pf-m-info {
     display: flex;
+    gap: var(--#{$form}__group-label--m-info--Gap);
     align-items: flex-end;
   }
 }
@@ -261,7 +274,6 @@ $pf-v5-c-form--m-horizontal--breakpoint-map: build-breakpoint-map("sm", "md", "l
 }
 
 .#{$form}__group-label-info {
-  margin-inline-start: var(--#{$form}__group-label-info--MarginLeft);
   font-size: var(--#{$form}__group-label-info--FontSize);
 }
 
